[gd_scene load_steps=11 format=3 uid="uid://c1anh3bo0rs4g"]

[ext_resource type="Script" path="res://Scripts/Enemy/enemy.gd" id="1_e3je8"]
[ext_resource type="Shader" path="res://Scripts/Shaders/enemy.gdshader" id="2_3mwb4"]
[ext_resource type="Texture2D" uid="uid://uaas6g0oraya" path="res://Assets/Enemy/tee.png" id="3_5k8td"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ynn2d"]
resource_local_to_scene = true
shader = ExtResource("2_3mwb4")
shader_parameter/hit_opacity = 0.0
shader_parameter/color_tint = Vector3(1, 1, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_j5l2b"]
radius = 63.0

[sub_resource type="CircleShape2D" id="CircleShape2D_agftp"]
radius = 2000.0

[sub_resource type="Animation" id="Animation_n00in"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Tee:material:shader_parameter/hit_opacity")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Blood:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_ie1fe"]
resource_name = "hit"
length = 0.1
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Tee:material:shader_parameter/hit_opacity")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 1.0, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Blood:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0vrf7"]
_data = {
"RESET": SubResource("Animation_n00in"),
"hit": SubResource("Animation_ie1fe")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_te0g5"]
size = Vector2(127, 127)

[node name="Enemy" type="CharacterBody2D" groups=["Enemy"]]
scale = Vector2(0.5, 0.5)
collision_layer = 4
collision_mask = 7
script = ExtResource("1_e3je8")

[node name="Tee" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_ynn2d")
scale = Vector2(0.3, 0.3)
texture = ExtResource("3_5k8td")

[node name="Collider" type="CollisionShape2D" parent="."]
position = Vector2(2, 0)
shape = SubResource("CircleShape2D_j5l2b")

[node name="DetectionRange" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionRange"]
shape = SubResource("CircleShape2D_agftp")

[node name="Blood" type="CPUParticles2D" parent="."]
position = Vector2(0, -64)
emitting = false
amount = 500
emission_shape = 3
emission_rect_extents = Vector2(85, 1)
direction = Vector2(0, -1)
initial_velocity_min = 1000.0
initial_velocity_max = 1000.0
angle_max = 180.0
scale_amount_min = 8.0
scale_amount_max = 8.0
color = Color(0.694118, 0.00784314, 0, 1)

[node name="HealthBar" type="ColorRect" parent="."]
visible = false
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = -80.0
color = Color(0, 1, 0, 1)

[node name="Animations" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_0vrf7")
}

[node name="Floor" type="StaticBody2D" parent="."]
position = Vector2(-2, -4)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
position = Vector2(2, 4)
shape = SubResource("RectangleShape2D_te0g5")

[connection signal="body_entered" from="DetectionRange" to="." method="_on_detection_range_body_entered"]
[connection signal="body_exited" from="DetectionRange" to="." method="_on_detection_range_body_exited"]
